feat: initial backend structure3